[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.11"
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
